k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plourinator
spec:
  selector:
    app: plourinator
  ports:
    - port: 80
      targetPort: 80
