k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plourinator
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - plourinator.jolakk.fr
      secretName: plourinator-tls
  rules:
    - host: plourinator.jolakk.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plourinator
                port:
                  number: 80
